[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Yoeri Otten <yoeori@live.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmath = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.9.0"
num-rational = "0.2.4"